removed my name

--- a/server-usage-endpoint.service
+++ b/server-usage-endpoint.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=simple
-User=athan
+User=
 WorkingDirectory=/path/to/script
 ExecStart=/path/to/script/venv/bin/flask --app WSGI run --port 6060 --host 0.0.0.0
 Restart=always
